ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nginx
spec:
  virtualhost:
    fqdn: bn-nginx.amer.end2end.link
    tls:
      secretName: eduk8s/contourcert
  routes:
    - services:
        - name: nginx
          port: 80
